--- a/home/home.html
+++ b/home/home.html
@@ -37,34 +37,29 @@
         <h4>Top Sellers</h4>
         <div class="cards-1">
             <div class="item">
-                <p class="number">1</p>
-                <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fHBlb3BsZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" alt="" height="88px" width="88px">
-                <h1 style="height: 24px; width: 87px; color: white;">Name</h1>
-                <p style="width: 45px; height: 24px; color: white;">Price</p>
+                <img src="profile.jpg" alt="" height="88px" width="88px">
+                <h1 >Mia Ayana</h1>
+                <p >5.250 ETH</p>
             </div>
             <div class="item">
-                <p class="number">1</p>
-                <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fHBlb3BsZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" alt="" height="88px" width="88px">
-                <h1 style="height: 24px; width: 87px; color: white;">Name</h1>
-                <p style="width: 45px; height: 24px; color: white;">Price</p>
+                <img src="card-2.jpg" alt="" height="88px" width="88px">
+                <h1 >Lady Young</h1>
+                <p >4.620 ETH</p>
             </div>
             <div class="item">
-                <p class="number">1</p>
-                <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fHBlb3BsZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" alt="" height="88px" width="88px">
-                <h1 style="height: 24px; width: 87px; color: white;">Name</h1>
-                <p style="width: 45px; height: 24px; color: white;">Price</p>
+                <img src="card-3.jpg" alt="" height="88px" width="88px">
+                <h1>Black Glass</h1>
+                <p>4.125 ETH</p>
             </div>
             <div class="item">
-                <p class="number">1</p>
-                <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fHBlb3BsZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" alt="" height="88px" width="88px">
-                <h1 style="height: 24px; width: 87px; color: white;">Name</h1>
-                <p style="width: 45px; height: 24px; color: white;">Price</p>
+                <img src="card-4.jpg" alt="" height="88px" width="88px">
+                <h1 >Budhiman</h1>
+                <p >3.921 ETH</p>
             </div>
             <div class="item">
-                <p class="number">1</p>
-                <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fHBlb3BsZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60" alt="" height="88px" width="88px">
-                <h1 style="height: 24px; width: 87px; color: white;">Name</h1>
-                <p style="width: 45px; height: 24px; color: white;">Price</p>
+                <img src="card-1.jpg" alt="" height="88px" width="88px">
+                <h1 >Rian Leon</h1>
+                <p >4.932 ETH</p>
             </div>
         </div>
     </section>
@@ -73,44 +68,44 @@
         <h1 id="bids">Hot Bids</h1>
         <div class="bid-cards">
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-1.jpg" alt="">
+                    <h1>Abstact Smoke Red Blue</h1>
+                    <p>1.25 ETH</p>
                 </div>
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-2.jpg" alt="">
+                    <h1>Paint Color on Wall</h1>
+                    <p>0.00 ETH</p>
                 </div>
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-3.jpg" alt="">
+                    <h1>Abstract Patern</h1>
+                    <p>0.87 ETH</p>
                 </div>
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-4.jpg" alt="">
+                    <h1>White Line Grafiti</h1>
+                    <p>0.09 ETH</p>
                 </div>
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-5.jpg" alt="">
+                    <h1>Abstract Triangle</h1>
+                    <p>0.90 ETH</p>
                 </div>
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-6.jpg" alt="">
+                    <h1>Lake Landscape</h1>
+                    <p>0.52 ETH</p>
                 </div>
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-7.jpg" alt="">
+                    <h1>Blue Red Art</h1>
+                    <p>0.85 ETH</p>
                 </div>
                 <div class="bid-items">
-                    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="">
-                    <h1>Title</h1>
-                    <p>Price Eth</p>
+                    <img src="item-8.jpg" alt="">
+                    <h1>Mountain Landscape</h1>
+                    <p>0.20 ETH</p>
                 </div>
         </div>
         </div>
