--- a/item/item.html
+++ b/item/item.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphique NFT Website</title>
     <link rel="stylesheet" href="item.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <img src="{{url_for('static', filename='logo.jpg')}}" alt="logo">
+                <img src="/logo.jpg" alt="logo">
                 <p id="title">Graphique NFT</p>
                 <input type="search" name="" placeholder="Search Item Here" id="search-bar">
 
@@ -21,20 +22,73 @@
                 <button id="search-btn" >Create</button>
                 <button id="connect-btn">Connect</button>
             </ul>
+            
         </nav>
     </header>
-    <div class="main">
-        <img src="back-photo.png" alt="">
-        <h1>Abstract Smoke Red Blue</h1>
-        <div class="popular">
-            <h1>From 4.5 ETH. 20 of 25 available</h1>
-            <p>Creator</p>
+    <div class="content">
+        <div class="background">
+            <img src="background.png" alt="">
+        </div>
+        <div class="contents">
+        <div class="content-info">
+            <h1>Abstract Smoke Red Blue</h1>
+            <p>From 4.5 ETH. 20 of 25 available</p>
+        </div>
+        <div>
+            <h4 style="color: white; padding-left: 50px;">Creator</h4>
             <div class="creator">
-                <img src="person.jpg" alt="" width="54px" height="54px">
-                <p>Mia Ayana</p>
+            <img src="person.jpg" alt="">
+            <p>Mia Ayana</p>
             </div>
+        </div>
+        <div class="options">
+            <div class="items">Details</div>
+            <div class="items">Offers</div>
+            <div class="items">History</div>
+        </div>
+        <div class="paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nemo tempore tempora, aut illo magnam exercitationem officia! Perspiciatis sit amet esse, saepe voluptatibus dolore dolores dolorum quod pariatur possimus libero.
+        </div>
+        <div class="button">
+            <button id="btn-1">Buy for 4.5 ETH</button>
+            <button id="btn-2">Make Offer</button>
+        </div>
         </div>
 
     </div>
+    <footer>
+        <div class="container">
+            
+            <div class="footer-items">
+                <h1>Graphique NFT</h1>
+                <p>Get the Latest updates</p>
+                <input type="search" name="" id="email-input" placeholder="Your Email">
+                <button id="email-btn">Email Me!</button>
+            </div>
+            <div class="footer-items">
+                <h1>Graphique NFT</h1>
+                <p>Explore</p>
+                <p>How it works</p>
+                <p>Contact us</p>
+            </div>
+            <div class="footer-items">
+                <h1>Support</h1>
+                <p>Help Center</p>
+                <p>Terms of Service</p>
+                <p>Legal</p>
+                <p>Privacy Policy</p>
+            </div>
+        </div>
+        <hr>
+        <div class="copyright">
+            <p>Graphique, NITT. All Rights Reserved</p>
+            <div class="brands">
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-telegram"></i>
+                <i class="fab fa-discord"></i>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
