--- a/item/item.html
+++ b/item/item.html
@@ -27,7 +27,7 @@
     </header>
     <div class="content">
         <div class="background">
-            <img src="background.png" alt="">
+            <img src="back-photo.png" alt="">
         </div>
         <div class="contents">
         <div class="content-info">
