--- a/home/home.html
+++ b/home/home.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <img src="/logo.jpg" alt="logo">
+                <img src="../logo.jpg" alt="logo">
                 <p id="title">Graphique NFT</p>
                 <input type="search" name="" placeholder="Search Item Here" id="search-bar">
 
