Final Changes were made

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -27,12 +27,15 @@
         </nav>
     </header>
     <section class="bg">
-        <img src="bg.jpg" alt="" width="100%">
+        <img src="bg.jpg" alt="" width="100%" id="background-pic">
         <img src="profile.jpg" alt="" id="profile-picture">
+        <h1>Mia Ayana</h1>
     </section>
     <section class="search">
         <input type="search" name=""  placeholder="Search Item here" id="item-search">
+        <div class="recently">
         <p id="recently-used" >Recently Used</p>
+            </div>
     </section>
     <section class="sales">
         <div class="cards">
